<resources>
    <string name="app_name">MCC Recharge</string>
    <string name="loginheader">LOGIN</string>
    <string name="userid">Customer ID</string>
    <string name="password">Password</string>
    <string name="signin">SIGN IN</string>
    <string name="forgotpassword">Forgot Password .?</string>
    <string name="forgotheader">Forgot Password</string>
    <string name="submit">SUBMIT</string>
    <string name="collectionheader">COLLECTION</string>
    <string name="collect_accountid">Enter Account ID</string>
    <string name="collect_rrno">Enter RRNO</string>
    <string name="search">SEARCH</string>
    <string name="semicolon">:&#032;&#032;&#032;</string>
    <string name="name">Name</string>
    <string name="rrno">RRNO</string>
    <string name="accountid">Account ID</string>
    <string name="tariff">Tariff</string>
    <string name="amtdue">Amt Due</string>
    <string name="payableamt">Payable Amount</string>
    <string name="rupee">\u20B9</string>
    <string name="collection">Collection</string>
    <string name="reports">Reports</string>
    <string name="recharge">Recharge History</string>
    <string name="printsuccess">Print Success</string>
    <string name="printfailed">Print Failed</string>
    <string name="paymentprint">Print</string>
    <string name="customerprint">Do you need Customer Print&#8230;??</string>
    <string name="customerprogressmsg">Printing Customers Receipt&#8230;</string>
    <string name="dealerprogressmsg">Printing Dealers Receipt&#8230;</string>
    <string name="exitdialogmsg">Receipt printed successfully&#8230;??</string>
    <string name="askforprint">Do you to Print Receipts&#8230;??</string>
    <string name="printfail">Please check the printer is ON or OFF&#8230; Or Printer might not connected to print&#8230;</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
