<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.tvd.mccrecharge.fragments.Collection_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/collect_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:gravity="center"
            android:text="@string/collectionheader"
            android:textSize="@dimen/text18"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_search_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:layout_marginTop="@dimen/dp8">

            <AutoCompleteTextView
                android:id="@+id/search_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/collect_accountid"
                android:imeOptions="actionSearch"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/collect_search_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:background="@drawable/button_twist"
            android:text="@string/search"/>

        <include layout="@layout/layout_collection_details"/>

    </LinearLayout>

</ScrollView>