<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tvd.mccrecharge.fragments.Forgot_Fragment">

    <TextView
        android:id="@+id/forgot_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/forgotheader"
        android:textSize="@dimen/text18"
        android:textStyle="bold"/>

    <android.support.v7.widget.CardView
        android:id="@+id/forgot_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp8"
        android:layout_marginRight="@dimen/dp8"
        android:layout_marginTop="@dimen/dp16"
        android:elevation="@dimen/dp4"
        app:cardCornerRadius="@dimen/cardradius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_forgot_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp16"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp16">

                <EditText
                    android:id="@+id/forgot_customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userid"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/forgot_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:background="@drawable/button_twist"
                android:text="@string/submit"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
